# sp-perturb-benchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: saunders_mvp.yaml  spac_seq_lung.yaml  spac_seq_subq.yaml  spac_seq_subq_rand10.yaml  spac_seq_subq_top10.yaml
notebooks/: build_local_notebook.py  build_notebook.py  build_saunders_b10_nb.py  run_benchmark.executed.ipynb  run_benchmark.ipynb  run_local_synthetic.ipynb  saunders_b10_benchmark.ipynb
scripts/: _dump_io.py  demo_track_c.py  plot_methods_demo.py
spbench/: aggregate.py  calibrate.py  compare.py  composition.py  config.py  coverage.py  data.py  dump_align.py  external.py  graph.py  harness.py  judge.py  mc_spatial_join.py  mc_spatial_report.py  niche.py  permutation.py  plotting.py  prediction.py  propagation_gt.py  reference.py  reference_aggregate.py  split.py  synthetic.py  viz.py
tests/: conftest.py  test_adapter_binan.py  test_adapter_biolord.py  test_adapter_celcomen.py  test_adapter_cheng.py  test_adapter_cpa.py  test_adapter_dhainaut.py  test_adapter_gears.py  test_adapter_internal_output.py  test_adapter_saunders.py  test_adapter_shen.py  test_adapter_spacetravlr.py  test_adapter_spatialprop.py  test_aggregate.py  test_annotators.py  test_calibrate.py  test_celcomen_model.py  test_compare_eval_x.py  test_compare_samples.py  test_composition.py  test_composition_effect.py  test_concert_in_run_benchmark.py  test_concert_integration.py  test_config.py  test_control_reference_centers.py  test_counts_export.py  test_coverage.py  test_data.py  test_degenerate_modes.py  test_dump_align.py  (+51 more)
(+80 files in other folders)
